# spectralCamera

./: README.md  pyproject.toml  setup.py
spectralCamera/: __init__.py  main.py
spectralCamera/algorithm/: baseCalibrate.py  basisVectors.py  calibrateFilterImage.py  calibrateFrom3Images.py  calibrateIFFromFilterImage.py  calibrateIFImage.py  calibrateLoader.py  calibratePFImage.py  calibrateRGBImage.py  calibrateRamanImage.py  calibrateRamanImages.py  fileSIVideo.py  fileSpectralImage.py  gridSuperPixel.py  imageMorph.py  imageWarp.py  io.py  spotIdentification.py  spotSpectraSimple.py
spectralCamera/algoritm/: calibrateFrom3Images.py  calibrateRGBImages.py  gridSuperPixel.py  spotSpectra.py
spectralCamera/gui/: sCameraFromFileGUI.py  sCameraGUI.py  sViewerGUI.py  saveSIVideoGUI.py  xywViewerGUI.py
spectralCamera/gui/spectralViewer/: sViewer.py  spotSpectraViewer.py  transmissionViewer.py  xywViewer.py
spectralCamera/instrument/: CMV2K-SSM5x5-600_1000-5.6.6.11.xml  HamamatsuCamera.py  baslerCamera.py  hamamatsu.py  milCamera.py  photonFocusCamera.py  webCamera.py
spectralCamera/instrument/sCamera/: sCamera.py  sCameraFromFile.py  sCameraGenerator.py
spectralCamera/utility/: calibrationCheck.py  generateCalibrationObject.py  generateCalibrationObjectRaman.py  raw2hspImage.py
spectralCamera/virtualSystem/: ifCalibrationMicroscope.py  multiSpectralMicroscope.py  simpleSpectralMicroscope.py
tests/: test_algorithm.py  test_calibration.py  test_component2.py  test_gui.py  test_instrument.py  test_spectralViewer.py  test_virtualMicroscope.py
(+8 files in other folders)
